* Open general ledger accounts from Income Statement relate
* Add warning when creating a second chart of account
* Manage chart update per record
* Allow to reconcile many group of lines with Line.reconcile

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Allow to keep original taxes when applying a tax rule
* Add legal notice on taxes
* Ease creation of new fiscalyear
* Drop required on party payable and receivable accounts
* Make tax description translatable
* Add searcher on General Ledger
* Add from and to date to General Ledger and Income Statement
* Add move filtering on date range
* Simplify default values for move line

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)
* Add definitive lock of period and fiscal year

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)
* Add test wizard for taxes
* Remove journal view
* Add amount second currency on Account
* Enforce second currency on Account
* Remove code from Fiscalyear and Period
* Remove journal option for updating posted moves
* Replace Journal-Period name by function field
* Manage readonly state on Move Line
* Add comparison amount on Balance Sheet and Income Statement

Version 4.0.0 - 2016-05-02
* Bug fixes (see mercurial logs for details)
* Move tax Rounding configuration from account_invoice
* Get the tax type from the base sign:
  The tax signs for credit note must be inverted manually.
* New reports design: General Ledger, Trial Balance and Aged Balance
* Add Python3 support
* Merge Third Party Balance into Aged Balance
* Add date to Aged Balance
* Add date on Reconciliation

Version 3.8.0 - 2015-11-02
* Bug fixes (see mercurial logs for details)
* Make Chart of Account not translatable
* Add Journal Cash reporting

Version 3.6.0 - 2015-04-20
* Bug fixes (see mercurial logs for details)
* Add support for PyPy
* Add move template
* Improve payable/receivable lines