@@ -1,3 +1,4 @@
+* Check receivable/payable to erase party
 * Open general ledger accounts from Income Statement relate
 * Add warning when creating a second chart of account
 * Manage chart update per record
